Enable cilium network policy

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -52,6 +52,8 @@ spec:
         - ports:
             - port: "80"
               protocol: TCP
+            - port: "443"
+              protocol: TCP
           rules:
             http:
               - {}
