--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -37,6 +37,7 @@ data:
       app_label_name: app.kubernetes.io/name
       version_label_name: app.kubernetes.io/version
       ingress_gateway_label: istio=ingress
+      egress_gateway_lavel: istio=egress
     additional_display_details:
       - annotation: kiali.io/api-spec
         icon_annotation: kiali.io/api-type
