Install istio egress gateway

--- a/kubernetes/apps/istio/istio-ingress.yaml
+++ b/kubernetes/apps/istio/istio-ingress.yaml
@@ -29,7 +29,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-egress
-  namespace: default
+  namespace: istio-system
 spec:
   interval: 6h
   dependsOn:
