--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -73,6 +73,10 @@ spec:
               protocol: TCP
             - port: "15090"
               protocol: TCP
+            - port: "443"
+              protocol: TCP
+            - port: "80"
+              protocol: TCP
           rules:
             http:
               - {}
