--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -77,6 +77,10 @@ spec:
               protocol: TCP
             - port: "80"
               protocol: TCP
+            - port: "7878"
+              protocol: TCP
+            - port: "8989"
+              protocol: TCP
           rules:
             http:
               - {}
