--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -67,60 +67,60 @@ spec:
         ruleSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
-        additionalScrapeConfigs:
-          - job_name: 'istiod'
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istiod;http-monitoring
-          - job_name: 'envoy-stats'
-            metrics_path: /stats/prometheus
-            kubernetes_sd_configs:
-              - role: pod
-                namespaces:
-                  names:
-                    - default
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
-                action: keep
-                regex: '.*-envoy-prom'
-          - job_name: 'istio-ztunnel'
-            scrape_interval: 15s
-            scrape_timeout: 10s
-            metrics_path: /stats/prometheus
-            scrape_protocols:
-              - OpenMetricsText1.0.0
-            kubernetes_sd_configs:
-              - role: pod
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_pod_container_name ]
-                action: keep
-                regex: istio-proxy  # Match the ztunnel container
-              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_scrape ]
-                action: keep
-                regex: true
-              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_path ]
-                action: replace
-                target_label: __metrics_path__
-                regex: (.+)
-              #              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
-              #                action: replace
-              #                target_label: __address__
-              #                regex: (.+);(.+)
-              #                replacement: $1:$2
-              - action: labelmap
-                regex: __meta_kubernetes_pod_label_(.+)
-              - source_labels: [ __meta_kubernetes_namespace ]
-                action: replace
-                target_label: namespace
-              - source_labels: [ __meta_kubernetes_pod_name ]
-                action: replace
-                target_label: pod
+#        additionalScrapeConfigs:
+#          - job_name: 'istiod'
+#            kubernetes_sd_configs:
+#              - role: endpoints
+#                namespaces:
+#                  names:
+#                    - istio-system
+#            relabel_configs:
+#              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
+#                action: keep
+#                regex: istiod;http-monitoring
+#          - job_name: 'envoy-stats'
+#            metrics_path: /stats/prometheus
+#            kubernetes_sd_configs:
+#              - role: pod
+#                namespaces:
+#                  names:
+#                    - default
+#            relabel_configs:
+#              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
+#                action: keep
+#                regex: '.*-envoy-prom'
+#          - job_name: 'istio-ztunnel'
+#            scrape_interval: 15s
+#            scrape_timeout: 10s
+#            metrics_path: /stats/prometheus
+#            scrape_protocols:
+#              - OpenMetricsText1.0.0
+#            kubernetes_sd_configs:
+#              - role: pod
+#                namespaces:
+#                  names:
+#                    - istio-system
+#            relabel_configs:
+#              - source_labels: [ __meta_kubernetes_pod_container_name ]
+#                action: keep
+#                regex: istio-proxy  # Match the ztunnel container
+#              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_scrape ]
+#                action: keep
+#                regex: true
+#              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_path ]
+#                action: replace
+#                target_label: __metrics_path__
+#                regex: (.+)
+#              #              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
+#              #                action: replace
+#              #                target_label: __address__
+#              #                regex: (.+);(.+)
+#              #                replacement: $1:$2
+#              - action: labelmap
+#                regex: __meta_kubernetes_pod_label_(.+)
+#              - source_labels: [ __meta_kubernetes_namespace ]
+#                action: replace
+#                target_label: namespace
+#              - source_labels: [ __meta_kubernetes_pod_name ]
+#                action: replace
+#                target_label: pod
