--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -114,6 +114,7 @@ spec:
       defaultConfig:
         proxyMetadata:
           ISTIO_META_DNS_CAPTURE: "true"
+      accessLogFile: /dev/stdout
     ownerName: ""
     pilot:
       affinity: { }
