Enable envoy access logs

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -115,6 +115,7 @@ spec:
         proxyMetadata:
           ISTIO_META_DNS_CAPTURE: "true"
       accessLogFile: /dev/stdout
+      accessLogEncoding: JSON
     ownerName: ""
     pilot:
       affinity: { }
