Add peer authentication policy to disable mtls for sonarr, radarr, and overseerr

--- a/kubernetes/apps/default/peer-auth-policy.yaml
+++ b/kubernetes/apps/default/peer-auth-policy.yaml
@@ -4,10 +4,26 @@ metadata:
   name: radarr
   namespace: default
 spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: radarr
   mtls:
     mode: UNSET
   portLevelMtls:
     7878:
       mode: DISABLE
+---
+apiVersion: security.istio.io/v1
+kind: PeerAuthentication
+metadata:
+  name: sonarr
+  namespace: default
+spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: sonarr
+  mtls:
+    mode: UNSET
+  portLevelMtls:
     8989:
       mode: DISABLE
