Add peer authentication policy to disable mtls for sonarr, radarr, and overseerr

--- a/kubernetes/apps/default/peer-auth-policy.yaml
+++ b/kubernetes/apps/default/peer-auth-policy.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: radarr
+      "app.kubernetes.io/name": "radarr"
   mtls:
     mode: UNSET
   portLevelMtls:
@@ -21,7 +21,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: sonarr
+      "app.kubernetes.io/name": "sonarr"
   mtls:
     mode: UNSET
   portLevelMtls:
