Add labels and metrics to arr apps

--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -22,6 +22,9 @@ spec:
     remediation:
       retries: 50
   values:
+    global:
+      labels:
+        app: overseerr
     #podAnnotations:
       #instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
     resources:
