--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -67,28 +67,28 @@ spec:
         ruleSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
-#        additionalScrapeConfigs:
-#          - job_name: 'istiod'
-#            kubernetes_sd_configs:
-#              - role: endpoints
-#                namespaces:
-#                  names:
-#                    - istio-system
-#            relabel_configs:
-#              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-#                action: keep
-#                regex: istiod;http-monitoring
-#          - job_name: 'envoy-stats'
-#            metrics_path: /stats/prometheus
-#            kubernetes_sd_configs:
-#              - role: pod
-#                namespaces:
-#                  names:
-#                    - default
-#            relabel_configs:
-#              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
-#                action: keep
-#                regex: '.*-envoy-prom'
+        additionalScrapeConfigs:
+          - job_name: 'istiod'
+            kubernetes_sd_configs:
+              - role: endpoints
+                namespaces:
+                  names:
+                    - istio-system
+            relabel_configs:
+              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
+                action: keep
+                regex: istiod;http-monitoring
+          - job_name: 'envoy-stats'
+            metrics_path: /stats/prometheus
+            kubernetes_sd_configs:
+              - role: pod
+                namespaces:
+                  names:
+                    - default
+            relabel_configs:
+              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
+                action: keep
+                regex: '.*-envoy-prom'
 #          - job_name: 'istio-ztunnel'
 #            scrape_interval: 15s
 #            scrape_timeout: 10s
@@ -111,11 +111,6 @@ spec:
 #                action: replace
 #                target_label: __metrics_path__
 #                regex: (.+)
-#              #              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
-#              #                action: replace
-#              #                target_label: __address__
-#              #                regex: (.+);(.+)
-#              #                replacement: $1:$2
 #              - action: labelmap
 #                regex: __meta_kubernetes_pod_label_(.+)
 #              - source_labels: [ __meta_kubernetes_namespace ]
