Disable all cilium dns rules

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -29,8 +29,9 @@ spec:
             - port: "53"
               protocol: ANY
           rules:
-            dns:
-              - matchPattern: '*'
+            dns: [{}]
+            l7: [{}]
+            http: [{}]
     - toFQDNs:
         - matchPattern: '*'
     - toEntities:
