Revert "Disable all cilium dns rules"
This reverts commit 8eae2f82a207af1008daef3d9b16ac87a172da99.

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -30,6 +30,8 @@ spec:
               protocol: ANY
           rules:
             dns: [{}]
+            l7: [{}]
+            http: [{}]
     - toFQDNs:
         - matchPattern: '*'
     - toEntities:
