Revert "Disable all cilium dns rules"
This reverts commit ab401b4deca1f4d514fe23229aa5d237c2ac7a58.

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -29,9 +29,8 @@ spec:
             - port: "53"
               protocol: ANY
           rules:
-            dns: [{}]
-            l7: [{}]
-            http: [{}]
+            dns:
+              - matchPattern: '*'
     - toFQDNs:
         - matchPattern: '*'
     - toEntities:
