--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -49,42 +49,42 @@ spec:
     - toEntities:
         - world
   endpointSelector: {}
----
-apiVersion: cilium.io/v2
-kind: CiliumNetworkPolicy
-metadata:
-  name: l7-ingress-visibility
-  namespace: default
-spec:
-  description: L7 policy
-  endpointSelector: {}
-  ingress:
-    - toPorts:
-        - ports:
-            - port: "6379"
-              protocol: TCP
-            - port: "8000"
-              protocol: TCP
-            - port: "9200"
-              protocol: TCP
-            - port: "50000"
-              protocol: TCP
-            - port: "5055"
-              protocol: TCP
-            - port: "15090"
-              protocol: TCP
-            - port: "443"
-              protocol: TCP
-            - port: "80"
-              protocol: TCP
-            - port: "7878"
-              protocol: TCP
-            - port: "8989"
-              protocol: TCP
-            - port: "9793"
-              protocol: TCP
-            - port: "9794"
-              protocol: TCP
-          rules:
-            http:
-              - {}
+#---
+#apiVersion: cilium.io/v2
+#kind: CiliumNetworkPolicy
+#metadata:
+#  name: l7-ingress-visibility
+#  namespace: default
+#spec:
+#  description: L7 policy
+#  endpointSelector: {}
+#  ingress:
+#    - toPorts:
+#        - ports:
+#            - port: "6379"
+#              protocol: TCP
+#            - port: "8000"
+#              protocol: TCP
+#            - port: "9200"
+#              protocol: TCP
+#            - port: "50000"
+#              protocol: TCP
+#            - port: "5055"
+#              protocol: TCP
+#            - port: "15090"
+#              protocol: TCP
+#            - port: "443"
+#              protocol: TCP
+#            - port: "80"
+#              protocol: TCP
+#            - port: "7878"
+#              protocol: TCP
+#            - port: "8989"
+#              protocol: TCP
+#            - port: "9793"
+#              protocol: TCP
+#            - port: "9794"
+#              protocol: TCP
+#          rules:
+#            http:
+#              - {}
