Test new cilium network policy for L7 ingress traffic through nginx ingress

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -82,6 +82,8 @@ spec:
               protocol: TCP
             - port: "80"
               protocol: TCP
+            - port: "15090"
+              protocol: TCP
           rules:
             http:
               - path: "/.*" # L7 visibility for all HTTP requests
