Test new cilium network policy for L7 ingress traffic through nginx ingress

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -63,7 +63,8 @@ spec:
   ingress:
     - fromEndpoints:
         - matchLabels:
-            k8s:io.kubernetes.pod.namespace: default
+            app.kubernetes.io/name: ingress-nginx
+            app.kubernetes.io/instance: ingress-nginx-internal
       toPorts:
         - ports:
             - port: "80"
@@ -81,8 +82,6 @@ spec:
             - port: "443"
               protocol: TCP
             - port: "80"
-              protocol: TCP
-            - port: "15090"
               protocol: TCP
           rules:
             http:
