Update overseerr service port

--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -46,6 +46,12 @@ spec:
         mountPath: /app/config
         storageClass: openebs-hostpath
         size: 10Gi
+    service:
+      main:
+        ports:
+          http:
+            port: 80
+            targetPort: 5055
     ingress:
       main:
         enabled: true
