Update cilium network policy namespace

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -54,7 +54,7 @@ apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
   name: nginx-ingress-istio-l7-policy
-  namespace: default # Adjust the namespace if needed
+  namespace: network # Adjust the namespace if needed
 spec:
   endpointSelector:
     matchLabels:
