--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -24,5 +24,5 @@ resources:
   - ./portainer
   - ./tubearchivist
   - ./plex
-  - ./network-policy.yaml
+#  - ./network-policy.yaml
   - ./peer-auth-policy.yaml
