Configure the eBPF-based TPROXY to reduce reliance on iptables rules for implementing Layer 7 policy.

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -4,6 +4,7 @@ socketLB:
 autoDirectNodeRoutes: true
 bpf:
   masquerade: false # Required for Talos `.machine.features.hostDNS.forwardKubeDNSToHost`
+  tproxy: true
 cgroup:
   automount:
     enabled: false
