Enable cilium envoy config

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
     - kind: ConfigMap
       name: cilium-helm-values
   values:
+    envoyConfig:
+      enabled: true
     hubble:
       enabled: true
       metrics:
