Enable cilium network policy for default namespace

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -87,6 +87,8 @@ spec:
               - method: POST
                 path: "/.*" # Allow all POST requests
   egress:
+    - toEntities:
+        - world
     - toEndpoints:
         - matchLabels:
             istio: sidecar-proxy # Ensuring traffic goes to the Istio sidecar
