Enable cilium network policy for default namespace

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -88,7 +88,7 @@ spec:
                 path: "/.*" # Allow all POST requests
   egress:
     - toEntities:
-        - world
+        - all
     - toEndpoints:
         - matchLabels:
             istio: sidecar-proxy # Ensuring traffic goes to the Istio sidecar
