Enable cilium network policy for default namespace

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -70,6 +70,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "10254" # prometheus
+              protocol: TCP
     # Allow traffic from Istio sidecar (internal mesh traffic)
     - fromEndpoints:
         - matchLabels:
