--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -86,9 +86,8 @@ spec:
                 path: "/.*" # Allow all GET requests
               - method: POST
                 path: "/.*" # Allow all POST requests
-    - fromEndpoints:
-        - matchLabels:
-            name: prometheus
+    - fromEntities:
+        - cluster
       toPorts:
         - ports:
             - port: "10254"
