--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -1,55 +1,29 @@
-#apiVersion: cilium.io/v2
-#kind: CiliumNetworkPolicy
-#metadata:
-#  name: allow-all-within-namespace
-#  namespace: default
-#spec:
-#  description: Allow all within namespace
-#  egress:
-#    - toEndpoints:
-#        - { }
-#  endpointSelector: { }
-#  ingress:
-#    - fromEndpoints:
-#        - { }
-#---
-#apiVersion: cilium.io/v2
-#kind: CiliumNetworkPolicy
-#metadata:
-#  name: dns-visibility
-#  namespace: default
-#spec:
-#  egress:
-#    - toEndpoints:
-#        - matchLabels:
-#            k8s:io.kubernetes.pod.namespace: kube-system
-#            k8s:k8s-app: kube-dns
-#      toPorts:
-#        - ports:
-#            - port: "53"
-#              protocol: ANY
-#          rules:
-#            dns:
-#              - matchPattern: '*'
-#    - toFQDNs:
-#        - matchPattern: '*'
-#    - toEntities:
-#        - all
-#  endpointSelector:
-#    matchLabels: { }
-#---
-#apiVersion: cilium.io/v2
-#kind: CiliumNetworkPolicy
-#metadata:
-#  name: l7-egress-visibility
-#  namespace: default
-#spec:
-#  description: L7 policy
-#  egress:
-#    - toEntities:
-#        - world
-#  endpointSelector: { }
-#---
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: allow-egress-with-visibility
+  namespace: default
+spec:
+  endpointSelector: {} # Apply to all pods in the default namespace
+  egress:
+    - toEntities:
+        - world # Allow egress to external destinations
+      toPorts:
+        - ports:
+            - port: "80"
+              protocol: TCP
+            - port: "443"
+              protocol: TCP
+            - port: "53" # DNS
+              protocol: UDP
+          rules:
+            http:
+              - method: GET
+                path: "/.*" # Log all HTTP GET requests
+              - method: POST
+                path: "/.*" # Log all HTTP POST requests
+            dns: [{}] # Enable DNS visibility for requests
+---
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
@@ -98,7 +72,7 @@ spec:
     - toEndpoints:
         - matchLabels:
             istio: sidecar-proxy # Ensuring traffic goes to the Istio sidecar
-      toPorts:
+    - toPorts:
         - ports:
             - port: "80"
               protocol: TCP
