--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -14,6 +14,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "8081" # arr apps to qbittorrent
+              protocol: TCP
           rules:
             http:
               - method: GET
