--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -4,19 +4,17 @@ metadata:
   name: allow-egress-with-visibility
   namespace: default
 spec:
-  endpointSelector: {} # Apply to all pods in the default namespace
+  endpointSelector: { } # Apply to all pods in the default namespace
   egress:
     - toEntities:
         - all # Allow egress to external destinations
-      toPorts:
+    - toPorts:
         - ports:
             - port: "80"
               protocol: TCP
             - port: "443"
               protocol: TCP
             - port: "8081" # arr apps to qbittorrent
-              protocol: TCP
-            - port: "15012" # istiod
               protocol: TCP
           rules:
             http:
@@ -30,6 +28,19 @@ spec:
           rules:
             dns:
               - matchPattern: "*"
+    # Allow traffic to Istio sidecar ports
+    - toPorts:
+        - ports:
+            - port: "15001"
+              protocol: TCP
+            - port: "15006"
+              protocol: TCP
+            - port: "15010"
+              protocol: TCP
+            - port: "15012"
+              protocol: TCP
+            - port: "15014"
+              protocol: TCP
 ---
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
