Add service entry for radarr

--- a/kubernetes/apps/default/radarr/service-entry.yaml
+++ b/kubernetes/apps/default/radarr/service-entry.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1
 kind: ServiceEntry
 metadata:
   name: external-svc-https
+  namespace: default
 spec:
   hosts:
     - api.radarr.video
