Enable cilium envoy proxy debugging

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -20,6 +20,12 @@ endpointRoutes:
   enabled: true
 envoy:
   enabled: true
+  debug:
+    admin:
+      enabled: true
+  prometheus:
+    serviceMonitor:
+      enabled: true
 hubble:
   enabled: false
 ipam:
