Disable cilium envoy proxy debugging

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -22,8 +22,9 @@ envoy:
   enabled: true
   debug:
     admin:
-      enabled: true
+      enabled: false
   prometheus:
+    enabled: true
     serviceMonitor:
       enabled: true
 hubble:
