Update default namespace egress policy

--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -7,6 +7,12 @@ spec:
   endpointSelector: { } # Apply to all pods in the default namespace
   egress:
     - toEntities:
+        - all
+      icmps:
+        - fields:
+            - type: 8
+            - type: 0
+    - toEntities:
         - all # Allow egress to external destinations
     - toPorts:
         - ports:
