--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -110,11 +110,19 @@ spec:
       injectionURL: ""
     meshConfig:
       enablePrometheusMerge: true
+      enableTracing: true
       ingressClass: istio-ingress
       defaultConfig:
         proxyMetadata:
           ISTIO_META_DNS_CAPTURE: "true"
       accessLogFile: /dev/stdout
+      extensionProviders:
+        - name: otel-tracing
+          opentelemetry:
+            port: 4317
+            service: istio-collector.istio-system.svc.cluster.local
+            resource_detectors:
+              environment: {}
     ownerName: ""
     pilot:
       affinity: { }
