--- a/kubernetes/apps/istio/jaeger/jaeger-operator.yaml
+++ b/kubernetes/apps/istio/jaeger/jaeger-operator.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: jaeger-operator
-  namespace: observability
+  namespace: istio-system
 spec:
   chart:
     spec:
@@ -17,7 +17,7 @@ spec:
     crds: Create
   interval: 6h0m0s
   releaseName: jaeger-operator
-  targetNamespace: observability
+  targetNamespace: istio-system
   upgrade:
     crds: CreateReplace
   values:
