Enable tracing for istio

--- a/kubernetes/apps/istio/istio-otel-collector.yaml
+++ b/kubernetes/apps/istio/istio-otel-collector.yaml
@@ -35,7 +35,7 @@ spec:
         logs:
           receivers: [otlp]
           processors: [batch]
-          exporters: []
+          exporters: [otlp/uptrace]
         traces:
           receivers:
           - otlp
