--- a/kubernetes/apps/istio/istio-otel-collector.yaml
+++ b/kubernetes/apps/istio/istio-otel-collector.yaml
@@ -16,6 +16,7 @@ spec:
     processors:
       batch:
     exporters:
+      debug:
       otlp/uptrace:
         endpoint: my-uptrace.observability.svc.cluster.local:14317
         tls:
@@ -42,3 +43,4 @@ spec:
             - opencensus
           exporters:
             - otlp/uptrace
+            - debug
