Enable tracing for istio

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -120,7 +120,7 @@ spec:
         - name: otel-tracing
           opentelemetry:
             port: 4317
-            service: istio-collector.istio-system.svc.cluster.local
+            service: istio-collector-collector.istio-system.svc.cluster.local
             resource_detectors:
               environment: {}
     ownerName: ""
