Enable tracing for istio

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -115,6 +115,8 @@ spec:
       defaultConfig:
         proxyMetadata:
           ISTIO_META_DNS_CAPTURE: "true"
+        tracing:
+          sampling: 100.0
       accessLogFile: /dev/stdout
       extensionProviders:
         - name: otel-tracing
