--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -25,8 +25,8 @@ spec:
     global:
       labels:
         app: overseerr
-    #podAnnotations:
-      #instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
+    podAnnotations:
+      instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
     resources:
       limits:
         cpu: 1
