--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -31,7 +31,7 @@ spec:
     argument: "1"
   python:
     env:
-      - name: OTEL_LOGS_EXPORTER
-        value: otlp_proto_http
+#      - name: OTEL_LOGS_EXPORTER
+#        value: otlp_proto_http
       - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
         value: 'true'
