--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -29,9 +29,9 @@ spec:
   sampler:
     type: parentbased_traceidratio
     argument: "1"
-  python:
-    env:
+#  python:
+#    env:
 #      - name: OTEL_LOGS_EXPORTER
 #        value: otlp_proto_http
-      - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
-        value: 'true'
+#      - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
+#        value: 'true'
