Add tracing to tubearchivist via injection

--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -29,6 +29,10 @@ spec:
   sampler:
     type: parentbased_traceidratio
     argument: "1"
+  python:
+    env:
+      - name: OTEL_PYTHON_DISABLED_INSTRUMENTATIONS
+        value: opentelemetry-instrumentation-celery
 #  python:
 #    env:
 #      - name: OTEL_LOGS_EXPORTER
