--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -32,7 +32,7 @@ spec:
   python:
     env:
       - name: OTEL_PYTHON_DISABLED_INSTRUMENTATIONS
-        value: opentelemetry-instrumentation-celery
+        value: opentelemetry-instrumentation-celery,opentelemetry-instrumentation-aws-lambda
 #  python:
 #    env:
 #      - name: OTEL_LOGS_EXPORTER
